--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular2-quickstart",
+  "name": "petmansion",
   "version": "1.0.0",
-  "description": "QuickStart package.json from the documentation, supplemented with testing support",
+  "description": "",
   "scripts": {
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "docker-build": "docker build -t ng2-quickstart .",
@@ -22,32 +22,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/common":  "2.0.0-rc.5",
-    "@angular/compiler":  "2.0.0-rc.5",
-    "@angular/core":  "2.0.0-rc.5",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
     "@angular/forms": "0.3.0",
-    "@angular/http":  "2.0.0-rc.5",
-    "@angular/platform-browser":  "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.5",
-    "@angular/router":  "3.0.0-rc.1",
-    "@angular/router-deprecated":  "2.0.0-rc.2",
-    "@angular/upgrade":  "2.0.0-rc.5",
-
-    "systemjs": "0.19.27",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.5",
+    "angular2-in-memory-web-api": "0.0.15",
+    "bootstrap": "^3.3.6",
     "core-js": "^2.4.0",
+    "jquery": "^3.1.0",
+    "jqueryui": "^1.11.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-
-    "angular2-in-memory-web-api": "0.0.15",
-    "bootstrap": "^3.3.6"
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
-
     "canonical-path": "0.0.2",
     "http-server": "^0.9.0",
     "tslint": "^3.7.4",
