--- a/package.json
+++ b/package.json
@@ -22,37 +22,38 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.5",
-    "angular2-in-memory-web-api": "0.0.15",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
+    "@angular/upgrade": "2.0.0",
+    "angular2-in-memory-web-api": "0.0.20",
     "bootstrap": "^3.3.6",
-    "core-js": "^2.4.0",
+    "bootstrap-datepicker": "^1.6.4",
+    "core-js": "^2.4.1",
     "jquery": "^3.1.0",
     "jqueryui": "^1.11.1",
+    "primeng": "^1.0.0-beta.15",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
     "lite-server": "^2.2.0",
-    "typescript": "^1.8.10",
+    "typescript": "^2.0.2",
     "typings": "^1.0.4",
     "canonical-path": "0.0.2",
     "http-server": "^0.9.0",
     "tslint": "^3.7.4",
     "lodash": "^4.11.1",
     "jasmine-core": "~2.4.1",
-    "karma": "^0.13.22",
+    "karma": "^1.2.0",
     "karma-chrome-launcher": "^0.2.3",
     "karma-cli": "^0.1.2",
     "karma-htmlfile-reporter": "^0.2.2",
